--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,3 +22,31 @@
     width: 38px;
     height: 38px;
 }
+
+.search-bar{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+
+    form{
+        display: flex;
+        justify-content: center;
+        width: 70%;
+
+        input{
+            font-size: 10px;
+            width: 100%;
+            padding: 5px 5px 5px 10px;
+            height: 38px;
+            outline: none;
+        }
+
+        button{
+            padding: 0px 8px;
+            font-size: 20px;
+            height: 38px;
+            cursor: pointer;
+        }
+
+    }
+}
