--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -4,6 +4,10 @@
     background-color: $secondary-color ;
     cursor: pointer;
     transition: all 0.3s;
+    margin:5px;
+    // padding: 10px;
+    min-height: 450px;
+    height: 100%;
 
     &:hover{
         transition: all 0.3;
